fix: hide scrollbar on encargos carousels

--- a/app/globals.css
+++ b/app/globals.css
@@ -155,3 +155,10 @@ a:hover .product-img {
     display: flex !important;
   }
 }
+
+.encargos-mobile::-webkit-scrollbar {
+  display: none;
+}
+.encargos-desktop::-webkit-scrollbar {
+  display: none;
+}
